syntax = "proto3";

package generator;

import "entities.proto";

service GeneratorService {
    rpc generateItems(GenerateItemsRequest) returns (GenerateItemsResponse);
    rpc generateCharactersCustom(GenerateCharactersRequestCustom) returns (GenerateCharactersResponse);
    rpc generateCharactersDB(GenerateCharactersRequestDB) returns (GenerateCharactersResponse);
    rpc generateCharacterGroups(GenerateCharacterGroupsRequest) returns (GenerateCharacterGroupsResponse);
}

message GenerateItemsRequest {
    entities.DataSourceEnumDTO source = 1;
    repeated entities.GenerationInstructionDTO arr = 2;
    entities.ContextDTO context = 3;
}
message GenerateItemsResponse {
    repeated entities.ItemDTO arr = 1;
}
message GenerateCharactersRequestCustom {
    entities.DataSourceEnumDTO source = 1;
    repeated entities.CharacterGenInstructionDTO arr = 2;
    entities.ContextDTO context = 3;
}
message GenerateCharactersRequestDB {
    entities.DataSourceEnumDTO source = 1;
    repeated string charGenInstructionIds = 2;
    entities.ContextDTO context = 3;
}
message GenerateCharactersResponse {
    repeated entities.CharacterDTO arr = 1;
}
message GenerateCharacterGroupsRequest {
    entities.DataSourceEnumDTO source = 1;
    repeated entities.CharacterGroupGenInstructionDTO arr = 2;
    entities.ContextDTO context = 3;
}
message GenerateCharacterGroupsResponse {
    repeated GenerateCharactersResponse arr = 1;
}